[package]
name = "statistics-helper"
version = "0.1.0"
authors = ["Elijah Potter"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.10.0"

[profile.release]
opt-level = 3